[gd_scene load_steps=8 format=3 uid="uid://bgo1q230aclpt"]

[ext_resource type="Texture2D" uid="uid://fd6xqqniebfs" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/GroundSelect/soil/soil.png" id="1_rn2yv"]
[ext_resource type="Texture2D" uid="uid://dsnv04duvceg0" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/GroundSelect/soil/soil_selected.png" id="2_engnp"]
[ext_resource type="Script" path="res://Scenes and Scripts/Game/Garden Center/Ground Select Minigame/soil.gd" id="3_pe1om"]
[ext_resource type="Texture2D" uid="uid://hshs1ivfmoqj" path="res://Assets/Art/UI/Menus/whole_screen_hud.png" id="4_644bb"]
[ext_resource type="FontFile" uid="uid://dchkjqker6h15" path="res://Assets/Font/Margarine-Regular.ttf" id="5_7b7y1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kw0ga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rn2yv")
}, {
"duration": 1.0,
"texture": ExtResource("2_engnp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmlo3"]
size = Vector2(288, 191)

[node name="Lehmboden" type="AnimatedSprite2D"]
position = Vector2(1708, 252)
sprite_frames = SubResource("SpriteFrames_kw0ga")
script = ExtResource("3_pe1om")
correct_soil = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-13, 2.5)
shape = SubResource("RectangleShape2D_rmlo3")

[node name="InformationLabel" type="Node2D" parent="."]
visible = false
position = Vector2(-435, -144)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InformationLabel"]
position = Vector2(30.5, 144)
scale = Vector2(0.257813, 0.492593)
texture = ExtResource("4_644bb")

[node name="Label" type="Label" parent="InformationLabel"]
offset_left = -161.0
offset_top = -77.0
offset_right = 379.0
offset_bottom = 546.0
theme_override_colors/font_color = Color(0.819608, 0.415686, 0.262745, 1)
theme_override_colors/font_outline_color = Color(0.227451, 0.223529, 0.290196, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("5_7b7y1")
theme_override_font_sizes/font_size = 30
text = "Lehmboden Fakten:
- Nährstoffreich
- Gut durchlüftet
- Guter Wasserspeicher
- Gute Wasserdurchlässigkeit

Pflanzen:
- Lavendel
- Obstbäume
- Gemüsepflanzen"
autowrap_mode = 3
text_overrun_behavior = 2

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
